dons_tests/valid_kxi/newa_type_check.kxi
class MyClass {}    
void main(){
    MyClass A = new MyClass();
}
