dons_tests/invalid_kxi/double_dec_var.kxi
void main(){
    int j = 4;
    char j = 'j';
}
